--- a/index.html
+++ b/index.html
@@ -170,30 +170,37 @@
                     <p>Beautiful branding for changes by Never Now in Australia.
                         changes is a platform for open discussion in an inclusive and
                         collaborative environment, providing the...</p>
+                        <div class="date">November 19, 2019</div>
                 </div>
                 <div class="datestory">
                     <div class="up">
                         <div class="datestory1">
                             <img src="./assets/story-2.png" alt="">
                             <h4>Find out if a school fits the family’s needs</h4>
+                            <div class="nov">November 19, 2019</div>
                         </div>
                         <div class="datestory2">
                             <img src="./assets/story-3.png" alt="">
                             <h4>Summer math & literacy centres for kids</h4>
-                    </div>
+                        <div class="nov2">November 19, 2019</div>
+                        </div>
 
 
                     
                     </div>
 
-                    <div class="down"><div class="datestory3">
+                    <div class="down">
+                        <div class="datestory3">
                         <img src="./assets/story-4.png" alt="">
                         <h4>Classroom management techniques for new tutors</h4>
-                    </div>
-                    <div class="datestory4">
+                        <div class="nov">September 10, 2019</div>
+                        </div>
+                        <div class="datestory4">
                         <img src="./assets/story-5.png" alt="">
                         <h4>Conversation rhymes
-                            improve kids listening</h4></div>
+                            improve kids listening</h4>
+                            <div class="nov"> July 19, 2019</div>
+                    </div>
                     
 
                     </div>
@@ -201,6 +208,7 @@
             </div>
 
             <button><a href="">View All</a></button>
+            <marquee behavior="" direction="" id="mark">All Rights Reserved. Please Contact your Admin if you face any sort of problem.</marquee>
 
 
         </section>
