--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <div class="footer1">
                 <div class="kidsedu">
-                    <img src="./assets/logo.png" alt="">
+                    <img src="./assets/fi_15371027.png" alt="">
                     <h1>Kids <br> Education</h1>
                     
                 </div>
